# finalproject_kizelbashev_M25-555

./: README.md  pyproject.toml
data/: exchange_rates.json  portfolios.json  rates.json  users.json
valutatrade_hub/cli/: interface.py
valutatrade_hub/core/: exceptions.py  models.py
valutatrade_hub/infra/: database.py
valutatrade_hub/parser_service/: updater.py
