[tool.poetry]
name = "finalproject_kizelbashev_M25-555"
version = "0.1.0"
description = "Homework 3 Python"
authors = ["Кизельбашев Александр <javendorg777@yandex.ru>"]
readme = "README.md"
packages = [
    { include = "valutatrade_hub", from = "." }
]

[tool.poetry.dependencies]
python = "^3.12"
prettytable = "^3.16.0"
requests = "^2.32.5"

[tool.poetry.scripts]
project = "main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 145
target-version = "py312"
exclude = ["venv", ".venv", "dist", "pycache"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []